Add calls to the SBE FIFO device driver to perform the SBE chip operations.
Change-Id: I2f1204efc8196e9d331789e7910f90537834ddde
Signed-off-by: Murulidhar Nataraju <murulidhar@in.ibm.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,8 @@ include_HEADERS = \
     sbe_interfaces.hpp
 
 noinst_HEADERS = \
-    sbe_chipOp_handler.hpp
+    sbe_chipOp_handler.hpp \
+    file.hpp
 
 libsbeinterfacedir = ${libdir}/sbe-interface
 libsbeinterface_LTLIBRARIES = libsbeinterface.la
