build: set language to C++
Set the language in the build to C++.

Change-Id: Ib429f64b57e29f1531d1daa89cebf252a3932249
Signed-off-by: Patrick Venture <venture@google.com>

--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ AC_CONFIG_SRCDIR([sbe_interfaces.cpp])
 AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE([subdir-objects -Wall -Werror foreign dist-xz])
 AM_SILENT_RULES([yes])
-
+AC_LANG([C++])
 
 # Checks for programs.
 AC_PROG_CXX
