Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,6 +1,6 @@
 [project]
 	description = Communication protocol for OpenPOWER Self-Boot Engine
 [access]
-	inheritFrom = openbmc-cpp-repos
+	inheritFrom = openbmc-all-repos
 [submit]
 	action = rebase if necessary
